Fixed colour on mobile menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,7 @@ textarea {
 .slicknav_nav a {
   font-size: 14px;
   letter-spacing: 0.01em;
+  color: black;
 }
 
 /*==========================
